[gd_scene load_steps=16 format=3 uid="uid://p6bued8iw6dx"]

[ext_resource type="Script" path="res://scripts/skills/projectile.gd" id="1_r1amo"]
[ext_resource type="Texture2D" uid="uid://xg7kxeeq8b31" path="res://assets/skills/CrecentSlashWind.png" id="2_cu8mo"]
[ext_resource type="Texture2D" uid="uid://cp5y0w0wolkwn" path="res://assets/skills/MaelstromSpriteSheet.png" id="3_yaysw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ydex8"]
radius = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_43dc0"]
atlas = ExtResource("2_cu8mo")
region = Rect2(0, 0, 125, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uaj5"]
atlas = ExtResource("2_cu8mo")
region = Rect2(125, 0, 125, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_by31j"]
atlas = ExtResource("2_cu8mo")
region = Rect2(250, 0, 125, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucse1"]
atlas = ExtResource("2_cu8mo")
region = Rect2(375, 0, 125, 110)

[sub_resource type="AtlasTexture" id="AtlasTexture_neav4"]
atlas = ExtResource("3_yaysw")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_iykpo"]
atlas = ExtResource("3_yaysw")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_08xf3"]
atlas = ExtResource("3_yaysw")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1hed"]
atlas = ExtResource("3_yaysw")
region = Rect2(768, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_kemfm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43dc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uaj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by31j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucse1")
}],
"loop": true,
"name": &"Crescent Wind Slash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_neav4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iykpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08xf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1hed")
}],
"loop": true,
"name": &"Water Bolt",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_73miw"]
resource_name = "Throw Spear"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dphf1"]
_data = {
"Throw Spear": SubResource("Animation_73miw")
}

[node name="Projectile" type="Area2D" groups=["Projectile"]]
collision_layer = 32
collision_mask = 16
script = ExtResource("1_r1amo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ydex8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kemfm")
animation = &"Water Bolt"

[node name="ProjectileLifeSpan" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dphf1")
}

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="area_entered" from="." to="." method="EnemyHit"]
[connection signal="timeout" from="ProjectileLifeSpan" to="." method="ProjectileTimeout"]
